@@ -3,6 +3,8 @@
 	* epackage.el (epackage-with-insert-file-contents-literally): New.
 	(epackage-git-current-sha): New.
 	(epackage-upgrade-package-main): Use `epackage-git-current-sha'
+	(epackage-string-delete-whitespace): New.
+	(epackage-cmd-select-package): Use `epackage-string-delete-whitespace'.
 
 2012-01-13 Fri  Jari Aalto  <jari.aalto@cante.net>
 
